# Plane-based-SLAM

./: CMakeLists.txt  README.md
include/: icp.h  pnp.h  slamFunc.h
src/: CMakeLists.txt  icp.cpp  main.cpp  pnp.cpp  slamFunc.cpp
